# claude-swarm

./: LICENSE  README.md  config.py  db.py  experts.py  pyproject.toml  spawn.py  wait.py  worker.py
.agents/skills/claude-swarm/: README.md  SKILL.md
.agents/skills/claude-swarm/references/: setup.md
.agents/skills/claude-swarm/scripts/: clean.py  db.py  experts.py  logs.py  spawn.py  wait.py  worker.py
.claude/: settings.json
.claude/commands/: postgres-agent.md  researcher.md  spawn.md  swarm-result.md  swarm-setup.md  swarm-status.md
.claude/skills/: claude-swarm
.claude/skills/claude-swarm/: SKILL.md
.claude/skills/claude-swarm/references/: setup.md
.claude/skills/claude-swarm/scripts/: cancel.py  doctor.py  errors.py  expert.py  logs.py  retry.py  spawn.py  status.py  synthesize.py  wait.py  worker.py
.github/workflows/: ci.yml
claude_swarm/: config.py  db.py  experts.py  spawn.py  wait.py  worker.py
skills/claude-swarm/: README.md
skills/claude-swarm/references/: setup.md
skills/claude-swarm/scripts/: cancel.py  clean.py  config.py  doctor.py  retry.py  utils.py  worker.py
tests/: e2e_test.py  test_swarm_e2e.py
